# Django_PI

./: .env_exemplo  .gitignore  dados.json  db.sqlite3  package-lock.json  pyproject.toml  requirements.txt
amigosjvll/: admin.py  apps.py
amigosjvll/migrations/: 0001_initial.py  0002_alter_animal_foto_alter_animal_id.py  0002_raca.py  0003_apelido.py  0004_especie.py  0005_animal.py  0006_rename_preco_animal_idade_remove_animal_isbn_and_more.py  0007_delete_apelido_remove_animal_quantidade.py  0008_alter_animal_id.py  0009_animal_imagem.py  0010_rename_imagem_animal_foto.py  0011_rename_foto_animal_imagem.py  0012_rename_imagem_animal_foto.py  0013_animal_descricao.py  0014_alter_animal_descricao.py
amigosjvll/models/: __init__.py  animal.py  apelido.py  cor.py  especie.py  raca.py
amigosjvll/serializers/: __init__.py  animal.py  cor.py  especie.py  raca.py
amigosjvll/views/: __init__.py  animal.py  cor.py  especie.py  raca.py
config/: settings.py  urls.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
