[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Ana Paula e Ana Luiza", email = "aninha10.desouza@gmail.com"},
]
dependencies = [
    "django>=4.2.5",
    "djangorestframework>=3.14.0",
    "gunicorn>=21.2.0",
    "whitenoise[brotli]>=6.5.0",
    "python-dotenv>=1.0.0",
    "django-cors-headers>=4.2.0",
    "psycopg2-binary>=2.9.9",
    "netifaces>=0.11.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = "true"


[tool.pdm.scripts]
pre_dev = "python ./scripts/set_my_ip.py"
dev = "python manage.py runserver 0.0.0.0:19003"